--- a/app/src/main/res/layout/activity_agree.xml
+++ b/app/src/main/res/layout/activity_agree.xml
@@ -75,7 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/spacing_middle" />
 
-        <android.support.v7.widget.CardView
+        <!--<android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="2dp"
@@ -114,7 +114,7 @@
                     android:textColor="@color/grey_60"
                     app:fontFamily="sans-serif-light" />
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>-->
 
         <View
             android:layout_width="match_parent"
